test/MapperTestLibrary1/Error/ConstructorMatchFailedMap2.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using LightweightObjectMapper;

namespace MapperTestLibrary;

internal class ConstructorMatchFailedMap2Class1
{
    public string MyProperty { get; set; }
}

internal class ConstructorMatchFailedMap2Class2
{
    public int MyProperty { get; set; }

    public ConstructorMatchFailedMap2Class2(string NotMyProperty)
    {
        MyProperty = NotMyProperty.Length;
    }
}

file class Extensions
{
    public Extensions()
    {
        new ConstructorMatchFailedMap2Class1().MapTo<ConstructorMatchFailedMap2Class2>();
        new ConstructorMatchFailedMap2Class2().MapTo<ConstructorMatchFailedMap2Class2>();
    }
}

#endif
